Fixes bug 56978 "alert dialog consumes 100% cpu if network is down" patch=moz@parabola.demon.co.uk r=danm,dougt sr=darin